<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pop_content"
    android:layout_width="match_parent"
    android:layout_height="128dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingHorizontal="12dp">

    <RelativeLayout
        android:id="@+id/ll_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#1e1c26"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btnWake_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/cancel"
            android:textColor="#999999"
            android:textSize="12sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivAlertIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tvAlertDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/des_cpu_tan"
            android:textColor="#5C6370"
            android:textSize="12sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/btnWake"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_gravity="end"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_t1_c20"
        android:gravity="center"
        android:minWidth="97dp"
        android:text="@string/manage"
        android:textColor="@color/white"
        android:textSize="12sp" />

</LinearLayout>