<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="24dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/permission_request"
        android:textColor="#2F2F2F"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/permission_dialog_des"
        android:textColor="#949494"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/hint"
        android:layout_width="250dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_white_r16"
        android:fontFamily="sans-serif-medium"
        android:gravity="start|center_vertical"
        android:paddingStart="12dp"
        android:text="@string/all_files_access"
        android:textColor="#949494"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginEnd="12dp"
        android:enabled="false"
        android:checked="true"
        android:trackTint="@color/teal_700"
        android:thumbTint="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="@+id/hint"
        app:layout_constraintEnd_toEndOf="@+id/hint"
        app:layout_constraintTop_toTopOf="@+id/hint"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:foreground="?selectableItemBackgroundBorderless"
        android:gravity="center"
        android:paddingHorizontal="8dp"
        android:text="@string/cancel"
        android:textColor="#9C9C9C"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/btnGrant"
        app:layout_constraintTop_toBottomOf="@+id/hint" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGrant"
        android:layout_width="96dp"
        android:layout_height="36dp"
        android:layout_marginTop="28dp"
        android:foreground="?selectableItemBackground"
        android:background="@drawable/btn_t1_c20"
        android:fontFamily="sans-serif-medium"
        android:text="@string/grant"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/hint"
        app:layout_constraintTop_toBottomOf="@+id/hint" />


</androidx.constraintlayout.widget.ConstraintLayout>