<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pop_content"
    android:layout_width="match_parent"
    android:layout_height="146dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingHorizontal="12dp">

    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#1e1c26"
        android:textSize="14sp"
        android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivAlertIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tvAlertDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_weight="1"
            android:text="@string/des_cpu_tan"
            android:textColor="#232F34"
            android:textSize="12sp" />

    </LinearLayout>


    <TextView
        android:id="@+id/btnWake"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_gravity="end"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_t1_c20"
        android:gravity="center"
        android:minWidth="97dp"
        android:text="@string/manage"
        android:textColor="@color/white" />

</LinearLayout>