<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pop_content"
    android:layout_width="match_parent"
    android:layout_height="256dp"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="12dp">

    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:visibility="visible">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="7dp"
            android:text="@string/app_name"
            android:textColor="#1E1C26"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ivAlertIcon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tvAlertDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="12dp"
        android:layout_weight="1"
        android:ellipsize="end"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/des_boot_tan"
        android:textColor="#5C6370"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/btnWake"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/btn_t1_c20"
        android:gravity="center"
        android:text="@string/manage"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/btnWake_no"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"
        android:background="@color/white"
        android:gravity="center"
        android:textSize="15sp"
        android:text="@string/exit"
        android:textColor="#999999" />

</LinearLayout>